# BallsDex-CommunityChallenge-Package

./: README.md  pyproject.toml
community_challenge/: admin.py  apps.py  models.py  patch.py
community_challenge/community_challenge/: __init__.py  cog.py
community_challenge/migrations/: 0001_initial.py  0002_add_core_features.py  0002_fix_schema.py  0003_add_filters.py  0003_add_specific_fk.py  0004_fix_duplicate_filter_columns.py  0005_challenge_challengeparticipant_and_more.py  0006_add_challenge_reward.py
community_challenge/migrations/community_challenge/migrations/: 0003_add_missing_filter_columns.py
marketdex_community_challenge/: pyproject.toml
marketdex_community_challenge/community_challenge/: admin.py  apps.py  models.py
marketdex_community_challenge/community_challenge/challenge_ext/: __init__.py
