[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballsdex-community-challenge"
version = "0.0.0"

description = "Community Challenge system for BallsDex v3"
license = "MIT"
authors = [
    { name = "Haymooed" },
]
readme = "README.md"

dependencies = [

]
